# llmscrub

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: .gitignore  demo.tape  postprocess.py
src/llmscrub/: cli.py  extra.py  op.py  redact.py  scan.py
tests/: test_extra.py
