[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscrub"
version = "0.1.1"
description = "Sweep LLM agent logs (Claude Code, Codex) for leaked secrets and redact them."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Harrison Qian"}]
keywords = ["claude-code", "codex", "secrets", "redaction", "security", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
llmscrub = "llmscrub.cli:main"

[project.urls]
Homepage = "https://github.com/harqian/llmscrub"
Issues = "https://github.com/harqian/llmscrub/issues"

[tool.setuptools.packages.find]
where = ["src"]
